# embedit

./: .gitignore  README.md  pyproject.toml
embedit/behaviour/: create.py  git.py  openai.py  openai_tools.py  transform.py
embedit/behaviour/pipeline_components/a02_split/: __init__.py
embedit/behaviour/pipeline_components/a03_process/search/: __init__.py
embedit/behaviour/pipelines/: __init__.py
embedit/behaviour/prompts/: default.py  transform.py
embedit/behaviour/search/pipeline_components/a01_gather/: __init__.py
embedit/behaviour/search/pipeline_components/a04_combine/: __init__.py
embedit/behaviour/search/pipelines/: __init__.py
embedit/behaviour/simple_transform/: __init__.py
embedit/cli/: __init__.py
embedit/structures/: embedding.py  special_tokens.py  text_file.py
embedit/utils/: diff.py  log.py
emedit/behaviour/pipeline_components/a01_gather/: __init__.py
emedit/behaviour/pipeline_components/a02_split/: __init__.py
emedit/behaviour/pipeline_components/a03_process/search/: __init__.py
emedit/behaviour/pipeline_components/a04_combine/: __init__.py
emedit/behaviour/pipelines/: __init__.py
emedit/cli/: __init__.py
emtool/behaviour/pipeline_components/a01_gather/: __init__.py
emtool/behaviour/pipeline_components/a02_split/: __init__.py
emtool/behaviour/pipeline_components/a03_process/search/: __init__.py
emtool/behaviour/pipeline_components/a04_combine/: __init__.py
emtool/behaviour/pipelines/: __init__.py
emtool/cli/: __init__.py
emtool/structures/: embedding.py  text_file.py
(+1 files in other folders)
