[tool.poetry]
name = "embedit"
version = "0.2.7"
description = ""
authors = ["IsaacBreen <mail@isaacbreen.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.25.0"
delegatefn = "^0.3.4"
rich = "^13.0.0"
dir2md = "^0.2.1"
gitpython = "^3.1.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
embedit = "embedit.cli:main"